Fixed Moving divs not showing
Small gripe--Needed a .. before the link to the file. -_-

--- a/styles/main.css
+++ b/styles/main.css
@@ -79,7 +79,7 @@ body {
     opacity: .2;
     height: 100vh;
     width: 100vw;
-    background: url('/images/rps-bg-overlay.png') round;
+    background: url('../images/rps-bg-overlay.png') round;
 }
 
 .game-bg {
